Updates to docs and permuteTest methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(coef,glmnetLRC)
 S3method(extract,glmnetLRC)
 S3method(missingpreds,glmnetLRC)
+S3method(permuteTest,glmnetLRC)
 S3method(plot,LRCpred)
 S3method(plot,glmnetLRC)
 S3method(predict,glmnetLRC)
@@ -10,10 +11,12 @@ S3method(print,glmnetLRC)
 S3method(print,lossMat)
 S3method(print,summaryLRCpred)
 S3method(summary,LRCpred)
+export(calcLoss)
 export(extract)
 export(glmnetLRC)
 export(lossMatrix)
 export(missingpreds)
+export(permuteTest)
 importFrom(glmnet,predict.lognet)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
