--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ S3method(missingpreds,glmnetLRC)
 S3method(permuteTest,glmnetLRC)
 S3method(plot,LRCpred)
 S3method(plot,glmnetLRC)
+S3method(plot,permuteTest)
 S3method(predict,glmnetLRC)
 S3method(print,glmnetLRC)
 S3method(print,lossMat)
+S3method(print,permuteTest)
 S3method(print,summaryLRCpred)
 S3method(summary,LRCpred)
 export(calcLoss)
